Optimize get > getFirst